--- a/index.html
+++ b/index.html
@@ -6,24 +6,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yigit's Personal Website</title>
-  <link rel="stylesheet" href="/css/index.css" />
-  <link rel="stylesheet" href="/css/global.css" />
+  <script src="/js/sidebar.js"></script>
+  <link rel="stylesheet" href="/css/index.css"/>
+  <link rel="stylesheet" href="/css/global.css"/>
+  <link rel="stylesheet" href="/css/sidebar.css"/>
 </head>
 
 <body style="background-color: white">
   <div class="navbar layer2 desktop">
-    <a href="/index.html" class="navbarButtons layer2">Home</a>
-    <a href="/html/other/projectsindex.html" class="navbarButtons layer2">Projects</a>
-    <a href="/html/other/softwareindex.html" class="navbarButtons layer2">My Software</a>
-    <a href="/html/other/about.html" class="navbarButtons layer2">About</a>
+    <a href="/index.html" class="active">Home</a>
+    <a href="/html/other/blogindex.html" class="">Blog</a>
+    <a href="/html/other/projectsindex.html" class="">Projects</a>
+    <a href="/html/other/softwareindex.html" class="">My Software</a>
+    <a href="/html/other/about.html" class="">About</a>
   </div>
-  <div class="navbarMobile layer2 mobile">
-    <a href="/index.html" class="navbarButtonsMB layer2">Home</a>
-    <a href="/html/other/blogindex.html" class="navbarButtonsMB layer2">Blog</a>
-    <a href="/html/other/projectsindex.html" class="navbarButtonsMB layer2">Projects</a>
-    <a href="/html/other/softwareindex.html" class="navbarButtonsMB layer2">My Software</a>
-    <a href="/html/other/about.html" class="navbarButtonsMB layer2">About</a>
+  <div id="mySidenav" class="sidenav mobile">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="/index.html" class="">Home</a>
+    <a href="/html/other/blogindex.html" class="">Blog</a>
+    <a href="/html/other/projectsindex.html" class="">Projects</a>
+    <a href="/html/other/softwareindex.html" class="">My Software</a>
+    <a href="/html/other/about.html" class="">About</a>
   </div>
+  <span onclick="openNav()" class="mobile">open</span>
   <img src="/img/index/mobilebg.png" alt="Nature Background Image For Mobile" style="width:100vw; height: auto;"
     class="mobile">
   <img src="/img/index/desktopbg.png" alt="Nature Background Image For Desktop" style="width:100vw; height: auto;"
