--- a/html/other/softwareindex.html
+++ b/html/other/softwareindex.html
@@ -6,11 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yigit's Personal Website</title>
-  <link rel="stylesheet" href="/css/about.css" />
-  <link rel="stylesheet" href="/css/global.css" />
+  <script src="/js/sidebar.js"></script>
+  <link rel="stylesheet" href="/css/index.css"/>
+  <link rel="stylesheet" href="/css/global.css"/>
+  <link rel="stylesheet" href="/css/sidebar.css"/>
 </head>
-  <p style="color: white; text-align: center; padding: 19% 0; font-size: 400%;">Working in progress...</p>
-<body style="background-color: #2b2a33">
+
+<body style="background-color: white">
+  <div class="navbar layer2 desktop">
+    <a href="/index.html" class="active">Home</a>
+    <a href="/html/other/blogindex.html" class="">Blog</a>
+    <a href="/html/other/projectsindex.html" class="">Projects</a>
+    <a href="/html/other/softwareindex.html" class="">My Software</a>
+    <a href="/html/other/about.html" class="">About</a>
+  </div>
+  <div id="mySidenav" class="sidenav mobile">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="/index.html" class="">Home</a>
+    <a href="/html/other/blogindex.html" class="">Blog</a>
+    <a href="/html/other/projectsindex.html" class="">Projects</a>
+    <a href="/html/other/softwareindex.html" class="">My Software</a>
+    <a href="/html/other/about.html" class="">About</a>
+  </div>
+  <span onclick="openNav()" class="mobile sidebarButton"><img src="/img/index/menubutton.png" alt="menu button layer2" class="menubutton"></span>
+  <p style="color: black; text-align: center; padding: 19% 0; font-size: 400%;">Working in progress...</p>
 </body>
 
 </html>
