added menu button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a href="/html/other/softwareindex.html" class="">My Software</a>
     <a href="/html/other/about.html" class="">About</a>
   </div>
-  <span onclick="openNav()" class="mobile">open</span>
+  <span onclick="openNav()" class="mobile sidebarButton"><img src="/img/index/menubutton.png" alt="menu button layer2" class="menubutton"></span>
   <img src="/img/index/mobilebg.png" alt="Nature Background Image For Mobile" style="width:100vw; height: auto;"
     class="mobile">
   <img src="/img/index/desktopbg.png" alt="Nature Background Image For Desktop" style="width:100vw; height: auto;"
