--- a/html/other/blogindex.html
+++ b/html/other/blogindex.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yigit's Personal Website</title>
   <script src="/js/sidebar.js"></script>
+  <link rel="stylesheet" href="/css/navbar.css"/>
   <link rel="stylesheet" href="/css/global.css"/>
   <link rel="stylesheet" href="/css/sidebar.css"/>
 </head>
