--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Yigit's Personal Website</title>
   <script src="/js/sidebar.js"></script>
   <link rel="stylesheet" href="/css/index.css"/>
+  <link rel="stylesheet" href="/css/navbar.css"/>
   <link rel="stylesheet" href="/css/global.css"/>
   <link rel="stylesheet" href="/css/sidebar.css"/>
 </head>
