--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yigit's Personal Website</title>
   <script src="/js/sidebar.js"></script>
-  <link rel="stylesheet" href="/css/index.css"/>
-  <link rel="stylesheet" href="/css/navbar.css"/>
-  <link rel="stylesheet" href="/css/global.css"/>
-  <link rel="stylesheet" href="/css/sidebar.css"/>
+  <link rel="stylesheet" href="/css/index.css" />
+  <link rel="stylesheet" href="/css/navbar.css" />
+  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="/css/sidebar.css" />
 </head>
 
-<body style="background-color: white">
+<body style="background-color: #f9f9f9">
   <div class="navbar layer2 desktop">
     <a href="/index.html" class="active">Home</a>
     <a href="/html/other/blogindex.html" class="">Blog</a>
@@ -29,12 +29,36 @@
     <a href="/html/other/softwareindex.html" class="">My Software</a>
     <a href="/html/other/about.html" class="">About</a>
   </div>
-  <span onclick="openNav()" class="mobile sidebarButton"><img src="/img/index/menubutton.png" alt="menu button layer2" class="menubutton"></span>
+  <span onclick="openNav()" class="mobile sidebarButton"><img src="/img/index/menubutton.png" alt="menu button layer2"
+      class="menubutton"></span>
   <img src="/img/index/mobilebg.png" alt="Nature Background Image For Mobile" style="width:100vw; height: auto;"
     class="mobile">
-  <img src="/img/index/desktopbg.png" alt="Nature Background Image For Desktop" style="width:100vw; height: auto;"
+  <img src="/img/index/desktopbg.png" alt="Nature Background Image For Desktop" style="width:100%; height: auto;"
     class="desktop">
-  <p>Latest Blog Posts</p>
+  <p class="centerTitle">Latest Blog Posts</p>
+  <hr class='titleSeperator'>
+  <img src="/img/other/emptyPixel.png" alt="" class="mobile" style="height: 40px;">
+
+  <a href="/html/blog/webBloat.html" class="postLink desktop">
+    <article class="post desktop">
+      <img src="/img/blogThumbnails/webBloat/lowres.png" alt="Debloating Web Thumbnail" class="desktop postimg">
+      <p class="posttitle desktop">How to make your website faster - Debloating Web</p>
+      <p class="postDesc">This is a article-like tutorial and some tips for making your website fast and smooth while
+        reducing the server load</p>
+      <img src="/img/other/emptyPixel.png" alt="">
+    </article>
+  </a>
+  <a href="/html/blog/webBloat.html" class="postLink mobile">
+    <article class="postMB mobile">
+      <img src="/img/blogThumbnails/webBloat/lowres.png" alt="Debloating Web Thumbnail" class="mobile postMBimg">
+      <p class="posttitleMB mobile">How to make your website faster - Debloating Web</p>
+      <p class="postDescMB">This is a article-like tutorial and some tips for making your website fast and smooth while
+        reducing the server load</p>
+      <img src="/img/other/emptyPixel.png" alt="">
+    </article>
+  </a>
+
+  <img src="/img/other/emptyPixel.png" alt="" style="height: 100px">
 </body>
 
 </html>
