--- a/html/other/about.html
+++ b/html/other/about.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yigit's Personal Website</title>
   <script src="/js/sidebar.js"></script>
-  <link rel="stylesheet" href="/css/navbar.css"/>
-  <link rel="stylesheet" href="/css/global.css"/>
-  <link rel="stylesheet" href="/css/sidebar.css"/>
+  <link rel="stylesheet" href="/css/navbar.css" />
+  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="/css/about.css" />
+  <link rel="stylesheet" href="/css/sidebar.css" />
 </head>
 
 <body style="background-color: white">
@@ -28,8 +29,67 @@
     <a href="/html/other/softwareindex.html" class="">My Software</a>
     <a href="/html/other/about.html" class="">About</a>
   </div>
-  <span onclick="openNav()" class="mobile sidebarButton"><img src="/img/index/menubutton.png" alt="menu button layer2" class="menubutton"></span>
-  <p style="color: black; text-align: center; padding: 19% 0; font-size: 400%;">Working in progress...</p>
+  <span onclick="openNav()" class="mobile sidebarButton"><img src="/img/index/menubutton.png" alt="menu button layer2"
+      class="menubutton"></span>
+  <a href=""></a>
+  <p class="centerTitle">About Me</p>
+  <hr class='titleSeperator'>
+  <p class="aboutMe desktop">Hi there! I'm a classic stereotypical coding teenager from Turkey! I love retro systems,
+    low level
+    software, linux
+    and
+    unix-like systems and electronics. And I think making lists are more effective for describing something so lets make
+    one:</p>
+  <ul class="aboutList desktop">
+    <li>Favourite Linux Distros: Ubuntu for desktops Debian for servers and Bedrock Linux for fantasy</li>
+    <li>Favourite Editor: VSCode but I don't want Microsoft spyware so I use VSCodium (Great IDE! Thank you so much
+      Microsoft! I hate you)</li>
+    <li>Favourite Language: Python</li>
+    <li>I Hate:</li>
+    <ul>
+      <li>Javascript</li>
+      <li>Chromium</li>
+      <li>Soydevs</li>
+      <li>Electron</li>
+      <li>I only like community based social media platforms like reddit and I hate person-based social media (Like
+        F*cebook and Instagram)</li>
+      <li>Mac, Windows, Ios and all the other oversimplified OSes</li>
+      <li>Microsoft, Apple and probably a 95% of big companies</li>
+    </ul>
+    <li>Favourite Games: Portal 2, Minecraft, Forza Horizon, Valorant, Teardown, Kerbal Space Program, Superliminal,
+      Mirrors Edge, Stardew Valley</li>
+    <li>I Liked It But Not My Favourite: Astroneer, Cyberpunk 2077, Crysis, Superhot</li>
+    <li>Things You Can Play While Waiting: Geometry Dash, osu!</li>
+    <li>Crap (Don't @ me!): FarCry 5</li>
+  </ul>
+  <p class="aboutMeMB mobile">Hi there! I'm a classic stereotypical coding teenager from Turkey! I love retro systems,
+    low level
+    software, linux
+    and
+    unix-like systems and electronics. And I think making lists are more effective for describing something so lets make
+    one:</p>
+  <ul class="aboutListMB mobile">
+    <li>Favourite Linux Distros: Ubuntu for desktops Debian for servers and Bedrock Linux for fantasy</li>
+    <li>Favourite Editor: VSCode but I don't want Microsoft spyware so I use VSCodium (Great IDE! Thank you so much
+      Microsoft! I hate you)</li>
+    <li>Favourite Language: Python</li>
+    <li>I Hate:</li>
+    <ul>
+      <li>Javascript</li>
+      <li>Chromium</li>
+      <li>Soydevs</li>
+      <li>Electron</li>
+      <li>I only like community based social media platforms like reddit and I hate person-based social media (Like
+        F*cebook and Instagram)</li>
+      <li>Mac, Windows, Ios and all the other oversimplified OSes</li>
+      <li>Microsoft, Apple and probably a 95% of big companies</li>
+    </ul>
+    <li>Favourite Games: Portal 2, Minecraft, Forza Horizon, Valorant, Teardown, Kerbal Space Program, Superliminal,
+      Mirrors Edge, Stardew Valley</li>
+    <li>I Liked It But Not My Favourite: Astroneer, Cyberpunk 2077, Crysis, Superhot</li>
+    <li>Things You Can Play While Waiting: Geometry Dash, osu!</li>
+    <li>Crap (Don't @ me!): FarCry 5</li>
+  </ul>
 </body>
 
 </html>
