--- a/html/other/about.html
+++ b/html/other/about.html
@@ -57,7 +57,7 @@
       <li>Microsoft, Apple and probably a 95% of big companies</li>
     </ul>
     <li>Favourite Games: Portal 2, Minecraft, Forza Horizon, Valorant, Teardown, Kerbal Space Program, Superliminal,
-      Mirrors Edge, Stardew Valley</li>
+      Mirrors Edge, Stardew Valley, Satisfactory</li>
     <li>I Liked It But Not My Favourite: Astroneer, Cyberpunk 2077, Crysis, Superhot</li>
     <li>Things You Can Play While Waiting: Geometry Dash, osu!</li>
     <li>Crap (Don't @ me!): FarCry 5</li>
