hopped distro because of changes in ubuntu 21.04

--- a/html/other/about.html
+++ b/html/other/about.html
@@ -41,7 +41,7 @@
     unix-like systems and electronics. And I think making lists are more effective for describing something so lets make
     one:</p>
   <ul class="aboutList desktop">
-    <li>Favourite Linux Distros: Ubuntu for desktops Debian for servers and Bedrock Linux for fantasy</li>
+    <li>Favourite Linux Distros: Arch or Endavour for desktops Debian for servers and Bedrock Linux for fantasy</li>
     <li>Favourite Editor: VSCode but I don't want Microsoft spyware so I use VSCodium (Great IDE! Thank you so much
       Microsoft! I hate you)</li>
     <li>Favourite Language: Python</li>
