Reduced server load

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   </div>
   <span onclick="openNav()" class="mobile sidebarButton"><img src="/img/index/menubutton.png" alt="menu button layer2"
       class="menubutton"></span>
-  <img src="/img/index/mobilebg.png" alt="Nature Background Image For Mobile" style="width:100vw; height: auto;"
+  <img src="https://i.redd.it/ud12z3tvi4281.png" alt="Nature Background Image For Mobile" style="width:100vw; height: auto;"
     class="mobile">
-  <img src="/img/index/desktopbg.png" alt="Nature Background Image For Desktop" style="width:100%; height: auto;"
+  <img src="https://i.redd.it/qhwe65tvi4281.png" alt="Nature Background Image For Desktop" style="width:100%; height: auto;"
     class="desktop">
   <p class="centerTitle">Latest Blog Posts</p>
   <hr class='titleSeperator'>
@@ -50,7 +50,7 @@
   </a>
   <a href="/html/blog/webBloat.html" class="postLink mobile">
     <article class="postMB mobile">
-      <img src="/img/blogThumbnails/webBloat/lowres.png" alt="Debloating Web Thumbnail" class="mobile postMBimg">
+      <img src="https://i.redd.it/dot3jsjwi4281.png" alt="Debloating Web Thumbnail" class="mobile postMBimg">
       <p class="posttitleMB mobile">How to make your website faster - Debloating Web</p>
       <p class="postDescMB">This is a article-like tutorial and some tips for making your website fast and smooth while
         reducing the server load</p>
