Made index page for blog

--- a/html/other/blogindex.html
+++ b/html/other/blogindex.html
@@ -9,6 +9,7 @@
   <script src="/js/sidebar.js"></script>
   <link rel="stylesheet" href="/css/navbar.css"/>
   <link rel="stylesheet" href="/css/global.css"/>
+  <link rel="stylesheet" href="/css/blogindex.css"/>
   <link rel="stylesheet" href="/css/sidebar.css"/>
 </head>
 
@@ -28,8 +29,39 @@
     <a href="/html/other/softwareindex.html" class="">My Software</a>
     <a href="/html/other/about.html" class="">About</a>
   </div>
-  <span onclick="openNav()" class="mobile sidebarButton"><img src="/img/index/menubutton.png" alt="menu button layer2" class="menubutton"></span>
-  <p style="color: black; text-align: center; padding: 19% 0; font-size: 400%;">Working in progress...</p>
+  <span onclick="openNav()" class="mobile sidebarButton"><img src="/img/index/menubutton.png" alt="menu button layer2"
+    class="menubutton"></span>
+  <p class="centerTitle">Categories</p>
+  <hr class='titleSeperator'>
+  <img src="/img/other/emptyPixel.png" alt="" class="mobile" style="height: 40px;">
+  <div class="category-container">
+  <a href="/html/other/blogall.html" style="text-decoration: none;">
+    <article class="category-first desktop">
+      <img src="https://i.redd.it/gsz23k5vi4281.png" alt="show all icon" class="category-image desktop">
+      <p class="category-title desktop">All</p>
+    </article>
+  </a>
+    <a href="/html/other/blogcontroversial.html" style="text-decoration: none;">
+    <article class="category desktop">
+      <img src="/img/other/cont.png" alt="Controversial icon" class="category-image desktop">
+      <p class="category-title desktop">Controversial</p>
+    </article>
+  </a>
+</a>
+<a href="/html/other/blogtutorial.html" style="text-decoration: none;">
+<article class="category desktop">
+  <img src="/img/other/tutorial.jpg" alt="tutorial icon" class="category-image desktop">
+  <p class="category-title desktop">Tutorial</p>
+</article>
+</a>
+</a>
+<a href="/html/other/blogall.html" style="text-decoration: none;">
+<article class="category desktop">
+  <img src="/img/other/news.png" alt="news icon" class="category-image desktop">
+  <p class="category-title desktop">News</p>
+</article>
+</a>
+</div>
 </body>
 
 </html>
